--- a/src/Layouts/MainContent/MuseNetComponent.css
+++ b/src/Layouts/MainContent/MuseNetComponent.css
@@ -2,7 +2,7 @@
   background-color: gray;
   padding: 5px;
   margin: 5px;
-  min-width: 299px;
+  max-width: 499px;
+  min-width: 300px;
   flex-grow: 1;
-
 }
