--- a/src/Layouts/Sidebar/SideBar.css
+++ b/src/Layouts/Sidebar/SideBar.css
@@ -1,5 +1,5 @@
 .sidebar.open {
-    width: 220px;
+    max-width: 220px;
 }
 .sidebar.closed {
   width: 50px;
@@ -10,4 +10,10 @@
   margin-top: 10px;
   transition: width .6s;
   transition-timing-function: ease;
+}
+
+@media only screen and (max-width: 768px) {
+  .sidebar {background-color: blue;}
+  .sidebar.closed {
+  }
 }
