--- a/src/Layouts/Sidebar/SideBar.css
+++ b/src/Layouts/Sidebar/SideBar.css
@@ -6,14 +6,13 @@
 }
 
 .sidebar {
-  background-color:aquamarine;
-  margin-top: 10px;
   transition: width .6s;
   transition-timing-function: ease;
 }
 
-@media only screen and (max-width: 768px) {
-  .sidebar {background-color: blue;}
-  .sidebar.closed {
-  }
+@media screen and (max-width: 700px) {
+
+}
+
+@media screen and (max-width: 400px) {
 }
