--- a/src/Layouts/Sidebar/SideBar.css
+++ b/src/Layouts/Sidebar/SideBar.css
@@ -11,6 +11,13 @@
 }
 
 @media screen and (max-width: 700px) {
+  .sidebar {
+    display: flex;
+    flex-direction: row;
+  }
+  .sidebar.closed{
+    width:inherit;
+  }
 
 }
 
