--- a/src/Layouts/MainContent/Randomize.css
+++ b/src/Layouts/MainContent/Randomize.css
@@ -1,4 +1,4 @@
-.shaker:hover {
+.shaker.only-element:hover {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
