--- a/src/Layouts/Sidebar/MenuItems.css
+++ b/src/Layouts/Sidebar/MenuItems.css
@@ -5,7 +5,7 @@
   transform-origin: top;
   transition: transform 0.26s ease;
   background-color:#482880;
-  color:#ffee33;
+  color:#81c784;
   border-radius: 15px;
   margin: 5px;
 }
@@ -14,6 +14,14 @@ div.label {
   display: flex;
   align-items: center;
   padding: 5px;
+}
+
+div.label span  {
+  color: #81c784;
+}
+
+.MuiIcon-colorPrimary {
+    color: #8561c5 !important;
 }
 
 div.offset {
@@ -39,7 +47,10 @@ div.offset {
 }
 
 @media screen and (max-width: 600px){
-
+  .menuItem {
+    margin: 0px;
+    border-radius: 0px;
+  }
   div.label {
     justify-content: left;
   }
