--- a/src/Layouts/MainContent/Randomize.css
+++ b/src/Layouts/MainContent/Randomize.css
@@ -3,7 +3,7 @@
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
-  animation-iteration-count: infinite;
+  animation-iteration-count: 2;
 }
 
 @keyframes shake {
